--- a/css/style.css
+++ b/css/style.css
@@ -1590,13 +1590,13 @@ body {
             from(rgba(126, 213, 111, 0.8)),
             to(rgba(40, 180, 133, 0.8))
         ),
-        url(../img/evo1.jpg);
+        url(../img/sanisidro1.jpg);
     background-image: linear-gradient(
             to right bottom,
             rgba(126, 213, 111, 0.8),
             rgba(40, 180, 133, 0.8)
         ),
-        url(../img/evo1.jpg);
+        url(../img/sanisidro1.jpg);
     background-size: cover;
     background-position: top;
     position: relative;
@@ -1620,13 +1620,13 @@ body {
                 from(rgba(126, 213, 111, 0.8)),
                 to(rgba(40, 180, 133, 0.8))
             ),
-            url(../img/evo1.jpg);
+            url(../img/sanisidro1.jpg);
         background-image: linear-gradient(
                 to right bottom,
                 rgba(126, 213, 111, 0.8),
                 rgba(40, 180, 133, 0.8)
             ),
-            url(../img/evo1.jpg);
+            url(../img/sanisidro1.jpg);
     }
 }
 @media only screen and (max-width: 37.5em) {
@@ -1829,13 +1829,13 @@ body {
             from(rgba(126, 213, 111, 0.8)),
             to(rgba(40, 180, 133, 0.8))
         ),
-        url(../img/evo2.jpg);
+        url(../img/sanisidro2.jpg);
     background-image: linear-gradient(
             to right bottom,
             rgba(126, 213, 111, 0.8),
             rgba(40, 180, 133, 0.8)
         ),
-        url(../img/evo2.jpg);
+        url(../img/sanisidro2.jpg);
     background-size: cover;
     -webkit-transform: skewY(-7deg);
     transform: skewY(-7deg);
@@ -1893,7 +1893,7 @@ body {
             rgba(255, 255, 255, 0.9) 50%,
             transparent 50%
         ),
-        url(../img/evo2.jpg);
+        url(../img/sanisidro2.jpg);
     background-size: 100%;
     border-radius: 3px;
     -webkit-box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.2);
@@ -1907,7 +1907,7 @@ body {
                 rgba(255, 255, 255, 0.9) 65%,
                 transparent 65%
             ),
-            url(../img/evo2.jpg);
+            url(../img/sanisidro2.jpg);
         background-size: cover;
     }
 }
@@ -1920,13 +1920,13 @@ body {
                 from(rgba(255, 255, 255, 0.9)),
                 to(rgba(255, 255, 255, 0.9))
             ),
-            url(../img/evo2.jpg);
+            url(../img/sanisidro2.jpg);
         background-image: linear-gradient(
                 to right,
                 rgba(255, 255, 255, 0.9) 0%,
                 rgba(255, 255, 255, 0.9) 100%
             ),
-            url(../img/evo2.jpg);
+            url(../img/sanisidro2.jpg);
     }
 }
 .book__form {
